KodingAppsController: SetNavItemState as loading for 3rdparty apps too, fix loading animation css

--- a/client/Main/styl/resurrection.styl
+++ b/client/Main/styl/resurrection.styl
@@ -245,8 +245,7 @@ button
         opacity               0 !important
 
     &.loading
-      .icon
-        vendor      animation, pulse 1.5s ease-in-out 100
+      vendor      animation, pulse 1.5s ease-in-out 100
 
     &.activity .icon
       r-sprite      app nav-activity
